# attenuation_integration

./: CMakeLists.txt  LICENSE  README.md  gamma_attn_tungsten.mac  gamma_attn_water.mac  project-build.sh
include/: constants.H  constants.hpp  initlib.H  initlib.hpp  inputlib.H  inputlib.hpp  protolib.H  protolib.hpp
src/: attenuation_integration.C  attenuation_integration.cpp  initfuncs.C  initfuncs.cpp  protofuncs.C  protofuncs.cpp
